--- a/index.html
+++ b/index.html
@@ -422,7 +422,8 @@ function updateCalendar(availability, businessDays) {
                 return acc;
             }, 0);
 
-            if (slotStart.getDay() === 0) { // 日曜日の場合
+            // 定休日（日曜日）であっても営業日のイベントがある場合は「〇」と表示
+            if (slotStart.getDay() === 0 && !isBusinessDay) { // 日曜日の場合
                 cell.textContent = '✕';
             } else if (isBusinessDay) {
                 cell.textContent = '◯';
