--- a/index.html
+++ b/index.html
@@ -416,27 +416,40 @@ function updateCalendar(availability, businessDays) {
                 return slotStart >= businessDayStart && slotEnd <= businessDayEnd;
             });
 
-            const hasBusinessEvent = availability.some(slot => {
+            const businessEvent = availability.find(slot => {
                 const eventStart = new Date(slot.startTime);
                 const eventEnd = new Date(slot.endTime);
                 return eventStart < slotEnd && slotStart < eventEnd && slot.title === "営業日";
             });
 
-            // 営業日のイベント時間帯かどうかを確認
-            const inBusinessEventTime = availability.some(slot => {
+            const count = availability.reduce((acc, slot) => {
                 const eventStart = new Date(slot.startTime);
                 const eventEnd = new Date(slot.endTime);
-                return eventStart < slotEnd && slotStart < eventEnd && slot.title === "営業日";
-            });
 
-            if (isBusinessDay && inBusinessEventTime) {
-                cell.textContent = '◯';
-            } else if (isBusinessDay) {
-                cell.textContent = '✕';
-            } else if (slotStart.getDay() === 0 && hasBusinessEvent) { // 日曜日の場合
-                cell.textContent = inBusinessEventTime ? '◯' : '✕';
+                if (eventStart < slotEnd && slotStart < eventEnd && slot.title !== "営業日") {
+                    return acc + 1;
+                }
+                return acc;
+            }, 0);
+
+            if (businessEvent) {
+                const businessEventStart = new Date(businessEvent.startTime);
+                const businessEventEnd = new Date(businessEvent.endTime);
+                if (slotStart >= businessEventStart && slotEnd <= businessEventEnd) {
+                    cell.textContent = '◯';
+                } else {
+                    cell.textContent = '✕';
+                }
             } else {
-                cell.textContent = '✕';
+                if (slotStart.getDay() === 0 && !isBusinessDay) { // 日曜日の場合
+                    cell.textContent = '✕';
+                } else if (isBusinessDay) {
+                    cell.textContent = '◯';
+                } else if (count === 0) {
+                    cell.textContent = '◯';
+                } else {
+                    cell.textContent = '✕';
+                }
             }
 
             cell.setAttribute('data-date', slotStart.toISOString());
