--- a/index.html
+++ b/index.html
@@ -402,6 +402,16 @@ function updateCalendar(availability, businessDays) {
         const day = new Date(currentDate);
         day.setDate(day.getDate() + i);
 
+        let businessEventTimes = []; // 営業日のイベント時間帯を記録する配列
+
+        availability.forEach(slot => {
+            const eventStart = new Date(slot.startTime);
+            const eventEnd = new Date(slot.endTime);
+            if (eventStart.toDateString() === day.toDateString() && slot.title === "営業日") {
+                businessEventTimes.push({start: eventStart, end: eventEnd});
+            }
+        });
+
         for (let j = 0; j < times.length; j++) {
             const cell = table.rows[j].cells[i + 1];
             const slotStart = new Date(day);
@@ -416,12 +426,6 @@ function updateCalendar(availability, businessDays) {
                 return slotStart >= businessDayStart && slotEnd <= businessDayEnd;
             });
 
-            const hasBusinessEvent = availability.some(slot => {
-                const eventStart = new Date(slot.startTime);
-                const eventEnd = new Date(slot.endTime);
-                return eventStart < slotEnd && slotStart < eventEnd && slot.title === "営業日";
-            });
-
             const count = availability.reduce((acc, slot) => {
                 const eventStart = new Date(slot.startTime);
                 const eventEnd = new Date(slot.endTime);
@@ -432,17 +436,13 @@ function updateCalendar(availability, businessDays) {
                 return acc;
             }, 0);
 
-            if (slotStart.getDay() === 0 && !isBusinessDay && !hasBusinessEvent) { // 日曜日の場合
+            if (slotStart.getDay() === 0 && !isBusinessDay && businessEventTimes.length === 0) { // 日曜日の場合
                 cell.textContent = '✕';
-            } else if (hasBusinessEvent) {
-                cell.textContent = '✕'; // 営業日のイベントがある日で設定された時間以外は「✕」
-                availability.forEach(slot => {
-                    const eventStart = new Date(slot.startTime);
-                    const eventEnd = new Date(slot.endTime);
-                    if (eventStart < slotEnd && slotStart < eventEnd && slot.title === "営業日") {
-                        cell.textContent = '◯'; // 営業日のイベントがある日の設定された時間は「◯」
-                    }
+            } else if (businessEventTimes.length > 0) {
+                const isBusinessEventTime = businessEventTimes.some(event => {
+                    return slotStart < event.end && event.start < slotEnd;
                 });
+                cell.textContent = isBusinessEventTime ? '◯' : '✕';
             } else if (isBusinessDay) {
                 cell.textContent = '◯';
             } else if (count === 0) {
