--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@ function updateCalendar(availability, businessDays) {
                     return slotStart < event.end && event.start < slotEnd;
                 });
                 cell.textContent = isBusinessEventTime ? '◯' : '✕';
+                cell.classList.add('available'); // クラスを追加
             } else if (isBusinessDay) {
                 cell.textContent = '◯';
                 cell.classList.add('available'); // クラスを追加
