--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
     .available {
         color: red;
     }
+        .unavailable {
+            background-color: #d3d3d3;
+        }
     </style>
 </head>
 <body>
@@ -450,6 +453,7 @@ function updateCalendar(availability, businessDays) {
                     cell.classList.add('available'); // クラスを追加
                 } else {
                     cell.textContent = '✕';
+                    cell.classList.add('unavailable'); // クラスを追加
                 }
             } else if (isBusinessDay) {
                 cell.textContent = '◯';
@@ -459,6 +463,7 @@ function updateCalendar(availability, businessDays) {
                 cell.classList.add('available'); // クラスを追加
             } else {
                 cell.textContent = '✕';
+                cell.classList.add('unavailable'); // クラスを追加
             }
 
             cell.setAttribute('data-date', slotStart.toISOString());
