--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             width: 100%;
             padding: 10px;
             margin-bottom: 20px;
-            border: 1px solid #ccc;
+            border: 1px solid #000;
             border-radius: 4px;
             box-sizing: border-box;
         }
