--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             width: 100%;
             padding: 10px;
             margin-bottom: 20px;
-            border: 1px solid #000;
+            border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
         }
@@ -118,7 +118,7 @@
             vertical-align: top;
             width: 14.28%; /* 7日間が一列に収まるように設定 */
             box-sizing: border-box;
-            border: 1px solid #ccc; /* ここで区切り線を追加 */
+            border: 1px solid #000; /* ここで区切り線を追加 */
         }
         .calendar th {
             background-color: #f7f7f7;
