--- a/index.html
+++ b/index.html
@@ -452,6 +452,7 @@ function updateCalendar(availability, businessDays) {
             
             if (slotStart.getDay() === 0 && !isBusinessDay && businessEventTimes.length === 0) { // 日曜日の場合
                 cell.textContent = '✕';
+                cell.classList.add('unavailable'); // クラスを追加
             } else if (businessEventTimes.length > 0) {
                 const isBusinessEventTime = businessEventTimes.some(event => {
                     return slotStart < event.end && event.start < slotEnd;
