--- a/index.html
+++ b/index.html
@@ -270,6 +270,12 @@
         }
 
 function selectDate(cell) {
+    // ✕の場合はクリック無効
+    if (cell.classList.contains('unavailable')) {
+        return;
+    }
+
+function selectDate(cell) {
     const cells = document.querySelectorAll('.calendar td');
     cells.forEach(td => td.classList.remove('selected'));
     cell.classList.add('selected');
