--- a/index.html
+++ b/index.html
@@ -270,6 +270,11 @@
         }
 
 function selectDate(cell) {
+    if (cell.classList.contains('unavailable')) {
+        // 'unavailable' クラスがあるセルはクリック無効
+        return;
+    }
+function selectDate(cell) {
     const cells = document.querySelectorAll('.calendar td');
     cells.forEach(td => td.classList.remove('selected'));
     cell.classList.add('selected');
