--- a/index.html
+++ b/index.html
@@ -269,11 +269,13 @@
             selectedSymptom = button.textContent;
         }
 
-function selectDate(cell) {
-    if (cell.classList.contains('unavailable')) {
+<script>
+    function selectDate(cell) {
         // 'unavailable' クラスがあるセルはクリック無効
-        return;
-    }
+        if (cell.classList.contains('unavailable')) {
+            return;
+        }
+        
 function selectDate(cell) {
     const cells = document.querySelectorAll('.calendar td');
     cells.forEach(td => td.classList.remove('selected'));
