--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
             border-radius: 4px;
             box-sizing: border-box;
         }
-        .visit-buttons, .symptoms {
+        .visit-buttons, .symptoms, .menu-sections, .irradiations  {
             display: flex;
             flex-wrap: wrap;
             gap: 10px;
             margin-bottom: 20px;
         }
-        .visit-buttons button, .symptoms button {
+        .visit-buttons button, .symptoms button, .menu-sections button, .irradiations button  {
             flex: 1;
             padding: 10px;
             border: 1px solid #ccc;
@@ -66,7 +66,7 @@
             text-align: center;
             white-space: nowrap;
         }
-        .visit-buttons button.active, .symptoms button.active {
+        .visit-buttons button.active, .symptoms button.active, .menu-sections button.active, .irradiations button.active  {
             background-color: #444;
             color: #fff;
         }
@@ -174,6 +174,12 @@
         .unavailable {
             background-color: #d3d3d3;
         }
+        .menu-section {
+            display: none;
+        }
+        .menu-section.active {
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -185,20 +191,43 @@
         <div class="label">電話番号</div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください">
 
-        <div class="label">ご来店回数</div>
+        <div class="label">ネイルのオフに関して選択してください</div>
         <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">初めて</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
+            <button type="button" id="firstVisit" onclick="selectVisit(this)">オフあり</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">オフなし</button>
         </div>
 
-        <div class="label">症状※必須</div>
-        <div class="symptoms">
-            <button type="button" onclick="selectSymptom(this)">軽症</button>
-            <button type="button" onclick="selectSymptom(this)">中等症</button>
-            <button type="button" onclick="selectSymptom(this)">重症</button>
+        <div class="label">メニューをお選びください</div>
+        <div class="menu-sections">
+            <button type="button" onclick="showMenu('male')">ハンドメニュー</button>
+            <button type="button" onclick="showMenu('female')">フットメニュー</button>
         </div>
 
-        <div class="label">希望日</div>
+        <div id="male" class="menu-section">
+            <label>◆ハンドメニュー◆</label>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this)">【脱毛】全顔</button>
+                <button type="button" onclick="selectSymptom(this)">【脱毛】鼻下と口下</button>
+                <button type="button" onclick="selectSymptom(this)">【脱毛】両頬</button>
+                <button type="button" onclick="selectSymptom(this)">【脱毛】顎、顎下</button>
+                <button type="button" onclick="selectSymptom(this)">【脱毛】ワキ</button>
+                <button type="button" onclick="selectSymptom(this)">お好きなパーツ3箇所</button>
+            </div>
+        </div>
+
+        <div id="female" class="menu-section">
+            <label>◆フットメニュー◆</label>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this)">全身(顔+VIOあり)</button>
+                <button type="button" onclick="selectSymptom(this)">全身(顔+VIOなし)</button>
+                <button type="button" onclick="selectSymptom(this)">お好きなパーツ3箇所</button>
+                <button type="button" onclick="selectSymptom(this)">お好きなパーツ5箇所</button>
+                <button type="button" onclick="selectSymptom(this)">お顔かVIO</button>
+                <button type="button" onclick="selectSymptom(this)">お顔とVIO</button>
+            </div>
+        </div>
+
+        <div class="label">希望日時</div>
         <div class="calendar-container">
             <div class="week-button-container">
                 <button class="week-button" onclick="previousWeek()">前の週</button>
@@ -229,7 +258,7 @@
             </div>
         </div>
 
-        <div class="label">メッセージ<br>（質問等お気軽にご記入ください）</div>
+        <div class="label">お直し・長さだしを選択された方は<br>ご希望本数を記載ください。</div>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
         <button class="submit-button" onclick="submitForm()">予約を行う</button>
@@ -259,7 +288,7 @@
             const buttons = document.querySelectorAll('.visit-buttons button');
             buttons.forEach(btn => btn.classList.remove('active'));
             button.classList.add('active');
-            visitCount = button.id === 'firstVisit' ? '初めて' : '2回目以降';
+            visitCount = button.id === 'firstVisit' ? 'オフあり' : 'オフなし';
         }
 
         function selectSymptom(button) {
@@ -267,6 +296,13 @@
             buttons.forEach(btn => btn.classList.remove('active'));
             button.classList.add('active');
             selectedSymptom = button.textContent;
+        }
+
+        function showMenu(menu) {
+            document.querySelectorAll('.menu-section').forEach(section => {
+                section.classList.remove('active');
+            });
+            document.getElementById(menu).classList.add('active');
         }
         
 function selectDate(cell) {
@@ -313,7 +349,7 @@ if (!formData.name || !formData.phone || !formData.visitCount) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nコース：${formData.selectedSymptom}${formData.visitCount}\nネイル：【${formData.visitCount}】\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\n${formData.dates[2]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
@@ -434,14 +470,6 @@ function updateCalendar(availability, businessDays) {
 
             const slotEnd = new Date(slotStart);
             slotEnd.setMinutes(slotStart.getMinutes() + 30);
-
-    // 12:00 - 13:00 を✕に設定
-    if (slotStart.getHours() === 12 || (slotStart.getHours() === 13 && slotStart.getMinutes() === 0)) {
-        cell.textContent = '✕';
-        cell.classList.add('unavailable'); // クラスを追加
-        cell.setAttribute('data-date', slotStart.toISOString());
-        continue;
-    }
 
             const isBusinessDay = businessDays.some(businessDay => {
                 const businessDayStart = new Date(businessDay.start);
