--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="label">電話番号</div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください">
 
-        <div class="label">ネイルのオフに関して選択してください</div>
+        <div class="label">ネイルのオフに関して選択</div>
         <div class="visit-buttons">
             <button type="button" id="firstVisit" onclick="selectVisit(this)">オフあり</button>
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">オフなし</button>
