--- a/index.html
+++ b/index.html
@@ -206,24 +206,26 @@
         <div id="male" class="menu-section">
             <label>◆ハンドメニュー◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)">【脱毛】全顔</button>
-                <button type="button" onclick="selectSymptom(this)">【脱毛】鼻下と口下</button>
-                <button type="button" onclick="selectSymptom(this)">【脱毛】両頬</button>
-                <button type="button" onclick="selectSymptom(this)">【脱毛】顎、顎下</button>
-                <button type="button" onclick="selectSymptom(this)">【脱毛】ワキ</button>
-                <button type="button" onclick="selectSymptom(this)">お好きなパーツ3箇所</button>
+                <button type="button" onclick="selectSymptom(this)">デザインアートコース</button>
+                <button type="button" onclick="selectSymptom(this)">4本アートコース</button>
+                <button type="button" onclick="selectSymptom(this)">2本アートコース/button>
+                <button type="button" onclick="selectSymptom(this)">定額デザインコース</button>
+                <button type="button" onclick="selectSymptom(this)">グラデーション</button>
+                <button type="button" onclick="selectSymptom(this)">フレンチ</button>
+                <button type="button" onclick="selectSymptom(this)">ワンカラー</button>
+                <button type="button" onclick="selectSymptom(this)">お直しネイル</button>
+                <button type="button" onclick="selectSymptom(this)">長さ出し/button>
+                <button type="button" onclick="selectSymptom(this)">ハンドネイルケア</button>
+                <button type="button" onclick="selectSymptom(this)">オフのみ</button>
             </div>
         </div>
 
         <div id="female" class="menu-section">
             <label>◆フットメニュー◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)">全身(顔+VIOあり)</button>
-                <button type="button" onclick="selectSymptom(this)">全身(顔+VIOなし)</button>
-                <button type="button" onclick="selectSymptom(this)">お好きなパーツ3箇所</button>
-                <button type="button" onclick="selectSymptom(this)">お好きなパーツ5箇所</button>
-                <button type="button" onclick="selectSymptom(this)">お顔かVIO</button>
-                <button type="button" onclick="selectSymptom(this)">お顔とVIO</button>
+                <button type="button" onclick="selectSymptom(this)"></button>
+                <button type="button" onclick="selectSymptom(this)"></button>
+                <button type="button" onclick="selectSymptom(this)"></button>
             </div>
         </div>
 
@@ -349,7 +351,7 @@ if (!formData.name || !formData.phone || !formData.visitCount) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nコース：${formData.selectedSymptom}${formData.visitCount}\nネイル：【${formData.visitCount}】\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\n${formData.dates[2]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nメニュー：${formData.selectedSymptom}${formData.visitCount}\nネイル：【${formData.visitCount}】\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\n${formData.dates[2]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
