--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
         <div id="female" class="menu-section">
             <label>◆フットメニュー◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)"></button>
-                <button type="button" onclick="selectSymptom(this)"></button>
-                <button type="button" onclick="selectSymptom(this)"></button>
+                <button type="button" onclick="selectSymptom(this)">フットデザインアートコース</button>
+                <button type="button" onclick="selectSymptom(this)">親指アートコース</button>
+                <button type="button" onclick="selectSymptom(this)">フット角質ケア</button>
             </div>
         </div>
 
