--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this)">デザインアートコース</button>
                 <button type="button" onclick="selectSymptom(this)">4本アートコース</button>
-                <button type="button" onclick="selectSymptom(this)">2本アートコース/button>
+                <button type="button" onclick="selectSymptom(this)">2本アートコース</button>
                 <button type="button" onclick="selectSymptom(this)">定額デザインコース</button>
                 <button type="button" onclick="selectSymptom(this)">グラデーション</button>
                 <button type="button" onclick="selectSymptom(this)">フレンチ</button>
