--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@ function selectDate(cell) {
             };
 
 // フォームデータのチェック
-if (!formData.name || !formData.phone || !formData.visitCount) {
-    alert('お名前・電話番号・ご来店回数すべてご記入ください。');
+if (!formData.name || !formData.phone) {
+    alert('お名前・電話番号ご記入ください。');
     return;
 }
 
