--- a/index.html
+++ b/index.html
@@ -505,8 +505,8 @@ function updateCalendar(availability, businessDays) {
                 cell.textContent = '✕';
                 cell.classList.add('unavailable'); // クラスを追加
             }
-            // 上記以外の条件で「営業日」でない場合、通常の処理を行う
-            else if (slotStart.getDay() === 3 && !isBusinessDay && businessEventTimes.length === 0) { 
+            
+            if (slotStart.getDay() === 3 && !isBusinessDay && businessEventTimes.length === 0) { // 日曜日の場合
                 cell.textContent = '✕';
                 cell.classList.add('unavailable'); // クラスを追加
             } else if (businessEventTimes.length > 0) {
