--- a/index.html
+++ b/index.html
@@ -492,13 +492,11 @@ function updateCalendar(availability, businessDays) {
                 return acc;
             }, 0);
 
-            const dayOfWeek = slotStart.getDay();
-            const hour = slotStart.getHours();
-            const isWeekend = (dayOfWeek === 0 || dayOfWeek === 6); // 土日かどうか
+            const isWeekend = (slotStart.getDay() === 0 || slotStart.getDay() === 6); // 日曜または土曜
+            const isWeekendEvening = (isWeekend && slotStart.getHours() >= 19 && slotEnd.getHours() <= 21);
+            const isWeekdayMorning = (!isWeekend && slotStart.getHours() >= 9 && slotEnd.getHours() <= 17);
 
-            // 追加条件: 月火木金の09:30～17:30、土日の19:30～21:00に✕を表示
-            if ((isWeekend && hour >= 19 && hour < 21) || 
-                (!isWeekend && hour >= 9 && hour < 18)) {
+            if (isWeekendEvening || isWeekdayMorning) {
                 cell.textContent = '✕';
                 cell.classList.add('unavailable'); // クラスを追加
             
