--- a/index.html
+++ b/index.html
@@ -492,16 +492,16 @@ function updateCalendar(availability, businessDays) {
                 return acc;
             }, 0);
 
-            // 土日が19:30～21:00までを×
-            if ((slotStart.getDay() === 0 || slotStart.getDay() === 6) && slotStart.getHours() >= 19 && slotStart.getHours() < 22) {
+            // 新しい条件の追加
+            const isWeekend = slotStart.getDay() === 0 || slotStart.getDay() === 6; // 土日
+            const isWeekday = slotStart.getDay() >= 1 && slotStart.getDay() <= 5; // 平日
+
+            if (isWeekend && slotStart.getHours() === 19 && slotEnd.getHours() === 21) {
                 cell.textContent = '✕';
                 cell.classList.add('unavailable'); // クラスを追加
-            }
-            // 月火木金が09:30～17:30までを×
-            else if ([1, 2, 4, 5].includes(slotStart.getDay()) && slotStart.getHours() >= 9 && slotStart.getHours() < 18) {
+            } else if (isWeekday && slotStart.getHours() >= 9 && slotEnd.getHours() <= 17) {
                 cell.textContent = '✕';
                 cell.classList.add('unavailable'); // クラスを追加
-            } 
             
             if (slotStart.getDay() === 3 && !isBusinessDay && businessEventTimes.length === 0) { // 日曜日の場合
                 cell.textContent = '✕';
