--- a/index.html
+++ b/index.html
@@ -492,16 +492,20 @@ function updateCalendar(availability, businessDays) {
                 return acc;
             }, 0);
 
-            // 新しい条件の追加
-            const isWeekend = slotStart.getDay() === 0 || slotStart.getDay() === 6; // 土日
-            const isWeekday = slotStart.getDay() >= 1 && slotStart.getDay() <= 5; // 平日
-
-            if (isWeekend && slotStart.getHours() === 19 && slotEnd.getHours() === 21) {
+            // 土日の19:30～21:00を×にする条件
+            if ((slotStart.getDay() === 0 || slotStart.getDay() === 6) && 
+                ((slotStart.getHours() === 19 && slotStart.getMinutes() >= 30) || 
+                 (slotStart.getHours() === 20 || slotStart.getHours() === 21))) {
                 cell.textContent = '✕';
-                cell.classList.add('unavailable'); // クラスを追加
-            } else if (isWeekday && slotStart.getHours() >= 9 && slotEnd.getHours() <= 17) {
+                cell.classList.add('unavailable');
+            }
+            // 月火木金の09:30～17:30を×にする条件
+            else if ((slotStart.getDay() === 1 || slotStart.getDay() === 2 || 
+                      slotStart.getDay() === 4 || slotStart.getDay() === 5) && 
+                     (slotStart.getHours() >= 9 && slotStart.getHours() < 18)) {
                 cell.textContent = '✕';
-                cell.classList.add('unavailable'); // クラスを追加
+                cell.classList.add('unavailable');
+            }
             
             if (slotStart.getDay() === 3 && !isBusinessDay && businessEventTimes.length === 0) { // 日曜日の場合
                 cell.textContent = '✕';
