--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <button type="button" onclick="selectSymptom(this)">フレンチ</button>
                 <button type="button" onclick="selectSymptom(this)">ワンカラー</button>
                 <button type="button" onclick="selectSymptom(this)">お直しネイル</button>
-                <button type="button" onclick="selectSymptom(this)">長さ出し/button>
+                <button type="button" onclick="selectSymptom(this)">長さ出し</button>
                 <button type="button" onclick="selectSymptom(this)">ハンドネイルケア</button>
                 <button type="button" onclick="selectSymptom(this)">オフのみ</button>
             </div>
