--- a/index.html
+++ b/index.html
@@ -220,8 +220,16 @@
             </div>
             <label>※お直しネイルを選択された方は本数をお選びください</label>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)">1回照射</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)">2回照射</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)">1本</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)">2本</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)">3本</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)">4本</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)">5本</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)">6本</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)">7本</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)">8本</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)">9本</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)">10本</button>
             </div>
         </div>
 
