--- a/index.html
+++ b/index.html
@@ -220,16 +220,16 @@
             </div>
             <label>※お直しネイルを選択された方は本数をお選びください</label>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)">1本</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)">2本</button>
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)">3本</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)">4本</button>
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)">5本</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)">6本</button>
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)">7本</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)">8本</button>
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)">9本</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)">10本</button>
+                <button type="button" id="oneirradiations" onclick="selectirradiations(this)">1本</button>
+                <button type="button" id="twoirradiations" onclick="selectirradiations(this)">2本</button>
+                <button type="button" id="threeirradiations" onclick="selectirradiations(this)">3本</button>
+                <button type="button" id="fourirradiations" onclick="selectirradiations(this)">4本</button>
+                <button type="button" id="fiveirradiations" onclick="selectirradiations(this)">5本</button>
+                <button type="button" id="sixirradiations" onclick="selectirradiations(this)">6本</button>
+                <button type="button" id="sevenirradiations" onclick="selectirradiations(this)">7本</button>
+                <button type="button" id="eightirradiations" onclick="selectirradiations(this)">8本</button>
+                <button type="button" id="nineirradiations" onclick="selectirradiations(this)">9本</button>
+                <button type="button" id="tenirradiations" onclick="selectirradiations(this)">10本</button>
             </div>
         </div>
 
@@ -309,8 +309,16 @@
 
         function selectirradiations(element) {
             /* 訪問回数ボタンの選択状態をリセット */
-            document.getElementById('firstirradiations').classList.remove('active');
-            document.getElementById('repeatirradiations').classList.remove('active');
+            document.getElementById('oneirradiations').classList.remove('active');
+            document.getElementById('twoirradiations').classList.remove('active');
+            document.getElementById('threeirradiations').classList.remove('active');
+            document.getElementById('fourirradiations').classList.remove('active');
+            document.getElementById('fiveirradiations').classList.remove('active');
+            document.getElementById('sixirradiations').classList.remove('active');
+            document.getElementById('sevenirradiations').classList.remove('active');
+            document.getElementById('eightirradiations').classList.remove('active');
+            document.getElementById('nineirradiations').classList.remove('active');
+            document.getElementById('tenirradiations').classList.remove('active');
             /* クリックされたボタンを選択状態にする */
             element.classList.add('active');
             /* 選択された訪問回数を変数に格納 */
