--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <button type="button" onclick="selectSymptom(this)">ハンドネイルケア</button>
                 <button type="button" onclick="selectSymptom(this)">オフのみ</button>
             </div>
-            <label>※お直しネイルを選択された方は本数をお選びください</label>
+            <label id="repairLabel" style="display:none;">※お直しネイルを選択された方は本数をお選びください</label>
             <div class="irradiations">
                 <button type="button" id="oneirradiations" onclick="selectirradiations(this)">1本</button>
                 <button type="button" id="twoirradiations" onclick="selectirradiations(this)">2本</button>
@@ -330,6 +330,15 @@
             buttons.forEach(btn => btn.classList.remove('active'));
             button.classList.add('active');
             selectedSymptom = button.textContent;
+        }
+
+            // お直しネイルが選択された時だけラベルを表示
+            const repairLabel = document.getElementById('repairLabel');
+            if (selectedSymptom === 'お直しネイル') {
+                repairLabel.style.display = 'block';
+            } else {
+                repairLabel.style.display = 'none';
+            }
         }
 
         function showMenu(menu) {
